workshops/03-pipelines/deploy/base/05-triggers/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-webhook-route
  namespace: retailflow
  labels:
    app.kubernetes.io/part-of: retailflow
    app.kubernetes.io/managed-by: kustomize
spec:
  to:
    kind: Service
    name: el-github-push-listener
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
